// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (jsx-curly-spacing) /src/tslint-react/jsx-curly-spacing/test.tsx[1, 28]: There should be no space before }

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
const fail = <App foo={bar } />;

======
const fail = <App foo={bar} />;

>>>>>> after
"
`;
